@@ -1,3 +1,7 @@
+Wed, Sep 20, 2006 Daniel R. Fisher
+1.  Fixed the function in gamess2qmcbeaver.py that gets rid of
+    unoccupied orbitals in the .ckmf file.
+
 Sat, Sep 16, 2006 Daniel R. Fisher
 1.  In QMCWalker::moveElectronsUmrigar93ImportanceSampling() and 
     calculateReverseGreensFunctionUmrigar93ImportanceSampling(), the
